--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -8,5 +8,7 @@ jobs:
           python-version: ["3.8", "3.11"]
     steps:
       - uses: actions/checkout@v4
+      - name: Run eslint
+        run: make eslint
       - name: Build with Makefile
         run: make
