--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "url": "https://github.com/ccnmtl/tobaccocessation/issues"
   },
   "devDependencies": {
-    "eslint": "~9.4.0",
-    "eslint-plugin-security": "^3.0.0"
+    "@eslint/eslintrc": "^3.1.0",
+    "@eslint/js": "^9.7.0",
+    "eslint": "~9.7.0",
+    "eslint-plugin-security": "^3.0.1",
+    "globals": "^15.8.0"
   }
 }
